--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tablero</title>
+    <title>Creacion de notas</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="navbar"><button id="addNoteBtn">Añadir Nota</button></div>
+    <div class="navbar"><button id="addNoteBtn">Crear Nota</button></div>
     <div id="board" class="board"></div>
     <script src="./script.js"></script>
 </body>
