--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creacion de notas</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="navbar"><button id="addNoteBtn">Crear Nota</button></div>
     <div id="board" class="board"></div>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
