--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creacion de notas</title>
+    <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
+    <!--Incluimos una jQuery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
     <div class="navbar"><button id="addNoteBtn">Crear Nota</button></div>
