--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>Creacion de notas</title>
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
-    <!--Incluimos una jQuery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
     <div class="navbar"><button id="addNoteBtn">Crear Nota</button></div>
     <div id="board" class="board"></div>
-    <script src="./js/script.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
