--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creacion de notas</title>
+    <link rel="icon" href="./image/js.png">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./styles/style.css">
 
